# shuuro-wasm

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  rsw.toml  share.sh
src/: lib.rs  local_position.rs  position.rs  position_container.rs  selection.rs  shop.rs  shuuro12.rs
tests/: web.rs
