[package]
name = "shuuro-wasm"
version = "0.2.6"
authors = ["uros-5"]
edition = "2021"
description = "Library for shuuro-wasm on client part."
repository = "https://github.com/uros-5/shuuro-wasm"
license = "Apache-2.0 license"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = {version = "0.2.87", features = ["serde-serialize"]}
serde = { version = "1.0", features = ["derive"] }
js-sys = "0.3.64"
shuuro = {git = "https://github.com/uros-5/shuuro", features = ["shuuro12", "shuuro8"]}
getrandom = { version = "0.2.10", features = ["js"] }
serde-wasm-bindgen = "0.5"
#shuuro deps

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }
dlmalloc = "0.2.4"

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1